<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Maeari for Blog</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Add Your Account</string>
    <string name="nav_header_subtitle">Maeari : Default</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main_home">Tips</string>
    <string name="main_accountlist">Manage Account</string>
    <string name="tip_title_tutorial">Tutorial</string>
    <string name="tip_text_tutorial">If you want to see Tutorial one more time, Click Settings > Tutorial.</string>
    <string name="tip_title_acctype">Supported Account Type</string>
    <string name="tip_text_acctype">This App supports Egloos, TISTORY, and other MetaWeBlog API supporting blogs.</string>
    <string name="action_dontseemore">DONT SEE MORE</string>
    <string name="action_ok">OK</string>
    <string name="tip_text_moaratst">Modify same posts at the same time. Also, you can post your article at many blogs at the same time.</string>
    <string name="tip_title_moaratst">Modify Articles at the same time</string>
    <string name="add_existed_blog">Add Existed Blog</string>
    <string name="submenu_title">Blogs</string>
    <string name="start_bt_add_exited_blog_s1">Let\'s Start!</string>
    <string name="title_add_exited_blog_s1">"Add Your Blog "</string>
    <string name="img_desc_add_exited_blog_s1">Blog Add Wizard Description Image</string>
    <string name="desc_add_existed_blog_s1">"You can add your existed blog. \nThis App supports MetaWeBlog, TISTORY, egloos API. "</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_desc_about">You can see App Information and Open Source License List.</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_about">About</string>
    <string name="title_addexblogs2">Select Your Blog Type</string>
    <string name="title_ab_addexblogs2">Register Your Blog</string>
    <string name="desc_addexblogs2">Now, this app supports MetaWeblog API and TISTORY API. Other blog services and APIs are not supported currently.</string>
    <string name="api_value_1">Connect with your blog with MetaWeBlog API</string>
    <string name="api_value_2">TISTORY connection with TISTORY API</string>
    <string name="api_value_3">egloos connection with MetaWeBlog API</string>
    <!-- <string name="api_value_3">egloos connection with egloos API</string> -->
    <string name="tistoryOAuth_addexblogs2">Tistory OAuth Authorize</string>
    <string name="egloosOAuth_addexblogs2">egloos MetaWeBlog API Authorize</string>
    <!-- <string name="egloosOAuth_addexblogs2">egloos OAuth Authorize</string> -->
    <string name="MWBlogAuth_addexblogs2">MetaWeBlog API Authorize</string>
    <string name="title_activity_mwblog_auth_form">Register Your Blog</string>
    <!-- <string name="egloosChooseApiMessage">egloos now supports both MetaWeBlog API and egloos API. What do you want to choose?</string> -->
    <!-- <string name="egloosChooseApiTitle">Choose API</string> -->
    <string name="egloos_id">Egloos ID</string>
    <string name="egloos_metaApiKey">Egloos API Key</string>
    <string name="metaWeBlog_url">MetaWeBlog API URL Address</string>
    <string name="metaWeBlog_id">MetaWeBlog ID</string>
    <string name="metaApiKey">MetaWeBlog API Key</string>
    <string name="sendmetaAPIvalue">NEXT</string>
</resources>
