<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_tips"
            android:title="@string/main_home" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/main_accountlist" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/submenu_title">
        <menu>
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_menu_add_new"
                android:title="@string/add_existed_blog" />
        </menu>
    </item>

</menu>
