<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MWBlogAuthForm"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/metaWeBlog_url"/>
    <EditText
        android:id="@+id/metaWeURLValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/metaWeBlog_id"/>
    <EditText
        android:id="@+id/metaWeIDValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/metaApiKey"/>
    <EditText
        android:id="@+id/MetaAPIValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

</LinearLayout>