<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MWBlogAuthForm"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/egloos_id"/>
    <EditText
        android:id="@+id/egloosIDValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/egloos_metaApiKey"/>
    <EditText
        android:id="@+id/egloosMetaAPIValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/sendEgloosmetaAPIvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendmetaAPIvalue"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    </RelativeLayout>

</LinearLayout>